1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_pixmap_save): palbuf needs same scope as 
	row_pointers.
	(keep_inside_screen): Change usage from widget to tkwin and window
	arguments (latter serves to distinguish parent from non-parent 
	snapshots).  Compute relocation to ensure enough is visible for
	parent case.

	* internal.[hm] (tkobjc_pixmap_create_from_widget): New argument
	parentFlag.  When set, request the window's parent window, which
	is decorated by the window manager.

	* Pixmap.m ([Pixmap +createBegin:]): Initialize parentFlag to NO.
	([Pixmap -createEnd]): Pass parentFlag to
	tkobjc_pixmap_create_from_widget.

	* Pixmap.[hm] ([Pixmap -setParentFlag:]): New method.

1998-09-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ZoomRaster.m ([ZoomRaster -setWidth:Height:]): Use
	logical{Width,Height} to set aspect ratio.

	* internal.m (tkobjc_pixmap_create_from_widget): Deiconify,
	process events, move, restack and process events again to 
	handle iconification, partial-offscreen, and overlap cases.

1998-09-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (keep_inside_screen): New function.
	(x_pixmap_create_from_window): Use 0/0 for x/y.
	(tkobjc_pixmap_create_from_widget): Call keep_inside_screen and then
	Tk_RestackWindow.

1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* WindowGeometryRecord.m (getValueList): Use ARCHIVERLITERALP.

1998-09-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_pixmap_save): Abort if ncolors == -1 in X11 case.

	* win32dib.c: Use XFREE instead of xfree throughout.
	Use LPBYTE instead of BYTE * throughout.
	(dib_create): Initialize new slot colorMap to NULL.
	(dib_createBitmap): Delete disabled free-if-bitmap-already-exists
	code.  Switch to 24 bit count.
	(dib_snapshot): Remove unused newColorMap and palette variables.
	Remove offs, now unused.  Get pgmp from existing dib->dibInfo.
	Don't free it when finished.  Switch to 24 bit count.